--- a/image.ipynb
+++ b/image.ipynb
@@ -213,7 +213,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "imgradientxy"
+   ]
   }
  ],
  "metadata": {
